--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
     font-weight: bold;
+    font-size: 15px;
   }
   
   .emojis {
@@ -36,7 +37,7 @@ body {
     background-color: #781BAA;
     color: white;
     padding: 1rem;
-    border-radius: 6px;
+    border-radius: 5px;
   }
   
   .icon {
